--- a/index.html
+++ b/index.html
@@ -1,35 +1,21 @@
 <!DOCTYPE html>
-
 <html lang="en">
-
 <head>
-
   <meta charset="UTF-8" />
-
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-
   <title>STORY DICE</title>
-
-  <link rel="stylesheet" href="style.css" />
-
+  <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap" rel="stylesheet">
-
 </head>
-
 <body>
-
+  <body>
+  <div class="top-mask"></div>
   <div class="container">
-
     <h1>STORY DICE</h1>
-
     <div id="dice-container" class="dice-grid"></div>
-
     <button id="rollBtn">ROLL AGAIN</button>
-
   </div>
-
   <script src="script.js"></script>
-
 </body>
 
 </html>
