--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <a href="3dice.html" class="outline-btn">3 DICE</a>
+
   <title>STORY DICE</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap" rel="stylesheet">
+
 </head>
 <body>
-  <body>
-  <div class="top-mask"></div>
+  
   <div class="container">
     <h1>STORY DICE</h1>
     <div id="dice-container" class="dice-grid"></div>
@@ -17,5 +19,4 @@
   </div>
   <script src="script.js"></script>
 </body>
-
 </html>
