--- a/3dice.html
+++ b/3dice.html
@@ -17,6 +17,6 @@
     <div id="dice-container" class="dice-grid"></div>
     <button id="rollBtn">ROLL AGAIN</button>
   </div>
-  <script src="cript-3dice.js"></script>
+  <script src="script-3dice.js"></script>
 </body>
 </html>
