--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <a href="3dice.html" class="outline-btn">3 DICE</a>
+  <a href="3drop.html" class="outline-btn">3 DROP</a>
 
-  <title>STORY DICE</title>
+  <title>STORY DROP</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap" rel="stylesheet">
 
@@ -13,9 +13,9 @@
 <body>
   
   <div class="container">
-    <h1>STORY DICE</h1>
+    <h1>STORY DROP</h1>
     <div id="dice-container" class="dice-grid"></div>
-    <button id="rollBtn">ROLL AGAIN</button>
+    <button id="rollBtn">LOAD NEW DROP</button>
   </div>
   <script src="script.js"></script>
 </body>
