Update and rename 3dice.html to 3drop.html

--- a/3drop.html
+++ b/3drop.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <a href="index.html" class="outline-btn">5 DICE</a>
+  <a href="index.html" class="outline-btn">5 DROP</a>
 
-  <title>STORY DICE</title>
+  <title>STORY DROP</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap" rel="stylesheet">
 
@@ -13,10 +13,10 @@
 <body>
   
   <div class="container">
-    <h1>STORY DICE</h1>
+    <h1>STORY DROP</h1>
     <div id="dice-container" class="dice-grid"></div>
-    <button id="rollBtn">ROLL AGAIN</button>
+    <button id="rollBtn">LOAD NEW DROP</button>
   </div>
-  <script src="script-3dice.js"></script>
+  <script src="script-3drop.js"></script>
 </body>
 </html>
