--- a/index.html
+++ b/index.html
@@ -3,20 +3,21 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <a href="3drop.html" class="outline-btn">3 DROP</a>
-
   <title>STORY DROP</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap" rel="stylesheet">
-
 </head>
 <body>
-  
+
+  <!-- Move the outline button here, not in the <head> -->
+  <a href="3drop.html" class="outline-btn">3 DROP</a>
+
   <div class="container">
     <h1>STORY DROP</h1>
     <div id="dice-container" class="dice-grid"></div>
     <button id="rollBtn">LOAD NEW DROP</button>
   </div>
+  
   <script src="script.js"></script>
 </body>
 </html>
